Task-62360: Delete on multiselection